# Poly

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_CN.md  THESIS_DECOUPLING.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.mplconfig/: fontlist-v390.json
agent/: factory.py
backend/: .gitignore  Dockerfile  e2e-test.sh  package-lock.json  package.json  tsconfig.json
data/: priors_dogecoin-above-0pt34-on-january-17.json  priors_nba-gsw-min-2025-01-15.json  priors_nba-phx-ind-2025-01-04.json  priors_nba-por-mia-2025-01-21.json  priors_will-cducsu-and-spd-form-the-next-german-government.json  priors_will-elon-musk-buy-msnbc-before-april-2025.json  priors_will-the-price-of-bitcoin-be-less-than-78000-on-mar-28.json  priors_will-xrp-dip-to-1pt00-in-march.json  priors_will-xrp-dip-to-1pt50-in-august-343-253-666-332-591.json  priors_will-yamand-orsi-win-the-2024-uruguay-presidential-election.json
docs/: thesis_abm_style_restructured_draft.md  thesis_figure_data_review.md  thesis_review_comments.md
environment/: __init__.py  env.py  settlement.py
experiments/: __main__.py  checkpoint.py  cli.py  config.py  parquet_sink.py  postprocess.py  runner.py
output_v13/: b1_metrics.csv  v13_metrics.csv
research/: analysis_cli.py
scripts/: 00_ingest_clob.py  00_ingest_dataapi.py  00_ingest_gamma.py  01_select_target_market.py  02_build_wallet_features.py  03_derive_calibration_priors.py  04_generate_personas.py  05_run_simulation.py  06_analyze_serd.py  07_render_figures.py  08_render_tables.py  README.md  _thesis_labels.py  _thesis_style.py  build_clob_dictionary_pdf.py  build_data_dictionary_pdf.py  build_thesis_docx.py  export_markets_full_csv.py  gen_experiment_configs.py  inspect_market_fields.py  plot_checkpoint_trial_2agent_t50.py  plot_rq1_price_volatility_trial.py  plot_subagent_20_round_trades_trial.py  render_thesis.py  run_experiment_suite.py  thesis_c_experiments.py  thesis_extra_artifacts.py  thesis_figures.py  thesis_v14_analysis.py  thesis_v15_4_2_micro.py  thesis_v15_4_2_patterns.py  thesis_v15_analysis.py  top_active_markets.py  v13_analyze_suites.py
src/: __main__.py  agent_legacy.py  clickhouse_client.py  clob_api.py  config.py  data_api.py  etl.py  events.py  gamma.py  gamma_full.py
tests/: _helpers.py  _http_mock.py  test_agent.py  test_agent_decision.py  test_agent_legacy.py  test_agent_persona.py  test_analysis_plots.py  test_analysis_serd.py  test_core_env.py  test_core_orderbook.py  test_gamma.py  test_ingest_smoke.py  test_population_build.py  (+14 more)
(+957 files in other folders)
