[project]
name = "polymetl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"web3==6.15.1",
	"clickhouse-driver==0.2.9",
	"pydantic==2.8.2",
	"pydantic-settings==2.4.0",
	"tenacity==8.5.0",
	"python-dotenv==1.0.1",
	# v7: plotting + table generation for thesis
	"matplotlib>=3.8",
	"seaborn>=0.13",
	"pandas>=2.0",
	# v8: parquet + YAML configs + Jinja2 templates
	"pyarrow>=14.0",
	"pyyaml>=6.0",
	"jinja2>=3.1",
	# v8.1: OpenAI-compatible client for DeepSeek tool calling
	"openai>=1.40",
	# v8.2: interactive HTML reports for experiments
	"plotly>=5.18",
	# v10: K-means clustering of wallet behavioral fingerprints
	"scikit-learn>=1.3",
	# v10: maker-taker network analysis
	"networkx>=3.2",
	# v12: live-streaming web demo
	"fastapi>=0.110",
	"uvicorn[standard]>=0.27",
	"sse-starlette>=2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "agent*", "environment*", "experiments*", "viz*", "webapp*"]
exclude = ["tests*", "docs*", "output*", "figures*", "tables*"]
